test/files/neg/plugin-rightafter-terminal/lib/plugins.jar.desired.sha1
6c9a6c7c3c5b86ece1d56476f7d6a35b6d7d7a03 ?plugins.jar
